added code coverage to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=1af1620975831ab3552bfd649c546155f81e718f7ae3593b875d6ed314ecd04c
 language: ruby
 rvm:
  - 2.6.3
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - bundle exec rspec
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
