--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 env:
   global:
     - CC_TEST_REPORTER_ID=1af1620975831ab3552bfd649c546155f81e718f7ae3593b875d6ed314ecd04c
+rvm:
+  - 2.6.3
+  - 2.1.9
+  - 1.9.3
+gemfile: gemfiles/travis.gemfile
 language: ruby
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
